# medium-sized-industrialisation

./: .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .readthedocs.yaml  CHANGELOG.rst  DEVDOCS.rst  MISC_DOCS.rst  MISC_PAPERS.rst  README.rst  babel.config.json  build_quests.sh  jsconfig.json  localpack.toml  pack.toml  package.json  pnpm-lock.yaml  pyproject.toml  quick-lint-js.config
.github/workflows/: ci.yml
charts/: nether_stars.mmd  platinum.mmd
config/: StarrySky.json5  astrocraft.json  betterf3.toml  chalk-common.toml  chatpatches.json  connector.json  connector_global_mod_aliases.json  coordinates-display.json  create_connected-common.toml  create_new_age-common.toml  createaddition-common.toml  createcobblestone-common.toml  cucumber-common.toml  cucumber-tags.json  cyclopscore-common.toml  embeddium-fingerprint.json  embeddium-options.json  embers-common.toml  emi.css  fml.toml  gcyr.yaml  gtca.yaml  gtceu.yaml  gtnn.json  indium-renderer.properties  keymap-keys.json  lambdynlights.toml  lithium.properties  map_atlases.json5  modularrouters-common.toml  reactive-client.toml  reactive-common.toml  rrp.properties  simpleveinminer.conf  sodium-extra-options.json  squake.json  toolbelt-common.toml  tram-additions.toml  viner-common.toml  zume.json5
config/NuclearCraft/: materials.toml  processors.toml
config/ProjectE/: client.toml  custom_emc.json  mapping.toml  mappingdump.json  processing.toml
config/ae2/: client.json  common.json
config/almostunified/: unify.json
config/bigglobe/: Big Globe.json5  mixins.properties
config/fabric/: indigo-renderer.properties
config/forgery/: features.ini
config/heracles/: groups.txt
config/jade/: plugins.json  sort-order.json
defaultconfigs/: create-server.toml  ftbchunks-world.snbt  reactive-server.toml  rftoolsbase-server.toml  woolytrees-server.toml
kubejs/: README.txt
mods/: mod-index.json
src/: _sailor_warning.js  settings.js
(+346 files in other folders)
