[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "bigger-industrialisation"
dynamic = ["version"]
description = "Medium sized industrialisation"
authors = [
    {name = "Lura Skye", email = "fuyukaii@proton.me"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.rst"
license = {text = "MPL-2.0"}

[project.scripts]
"ethylene-calculator" = "bi.ethylene_calculator:main"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
package-dir = "pysrc"

[tool.pdm.dev-dependencies]
dev = [
    "sphinx>=7.1.2,<8.0",
    "sphinx-inline-tabs>=2023.4.21",
    "kamuidrome>=0.8.0",
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "sphinx-toolbox>=3.8.0",
]
